--- a/ai_studio_app/templates/index.html
+++ b/ai_studio_app/templates/index.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-  <body>
-    <div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem"><h3 style="padding:2rem">Body</h3></div>
+  <body class="ai-studio-body">
+    <div>
+      <h3>커넥트브릭으로 이동중입니다.</h3>
+    </div>
+    <div class="ai-studio-loading">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </body>
 {% endblock %}
